# coder-crew

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt  run.bat  run.py
crewkit/: __init__.py  agents.py  chat.py  claude_conf.py  crew.py  crew_db.py  gate.py  ledger.py  mcp_bridge.py  server.py  tools.py
crewkit/swarm/: README.md  __init__.py  api.py  queue.py  runner.py  supervisor.py  worker.py
tests/: test_smoke.py
web/: index.html
